@@ -1,8 +1,16 @@
+March 17th, 2021: Alex Burger <alex_b@users.sourceforge.net>
+- Added support for IPv6.  Feature must be enabled by setting ipv6enable = 1 in
+  snmptt.ini.  Remaining features to update:  MATCH and strip_domain_name.
+- Changed Perl module for DNS support from Socket to IO::Socket::IP and from
+  functions aton/ntoa to getaddrinfo/getnameinfo to support IPv6.
+- Fixed bug with dns not working for enterprise variables of net-snmp not
+  enabled.
+
 March 13th, 2021: Alex Burger <alex_b@users.sourceforge.net>
-- Used PerlCritic to check all source files:
+- Used PerlCritic to check all source files.
 - Changed open() calls from two arguments to three.
 - Replace Perl bare words with variables.
-- Enabled Perl warnings
+- Enabled Perl warnings.
 
 March 11th, 2021: Alex Burger <alex_b@users.sourceforge.net>
 - Replaced Perl smartmatch as it's not considered experiemental.
